tests/analyzer/errors/fail.ray
error FooErr { bar }

fn foo() -> bool {
    fail FooErr.bar
}

fn main() {}
